--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,137 +1,177 @@
 {
-  "ACTION_NOT_REVERSED": "This action cannot be reversed.",
-  "ADD_STUDENT": "Add student",
-  "AND": " and",
-  "APP_SUBTITLE": "Organize your private lessons",
-  "ARCHIVE_STUDENT": "Archive student",
-  "AVATAR": "Avatar",
-  "BACK": "Back",
-  "CANCEL": "Cancel",
-  "CLOSE_MENU": "Close menu",
-  "CONFIRM_PASSWORD": "Confirm password",
-  "DELETE": "Delete",
-  "EDIT_STUDENT": "Edit student",
-  "EMAIL": "Email",
-  "ERR.AUTH_INVALID": "The password or the email is invalid",
-  "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
-  "ERR.CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
-  "ERR.EMAIL_ALREADY_IN_USE": "The email address is already in use by another account",
-  "ERR.EMAIL_INVALID": "Please, enter valid email address",
-  "ERR.EMAIL_REQUIRED": "Email is required",
-  "ERR.PASSWORD_INVALID": "Password needs to be at least six characters",
-  "ERR.PASSWORD_REQUIRED": "Password is required",
-  "ERR.UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later",
-  "ERR.USER_NOT_FOUND": "User nor found",
-  "FINALIZE": "Finalize",
-  "FLAG_OF": "Flag of ",
-  "FORM.ACADEMIC_COURSE": "ACADEMIC_COURSE",
-  "FORM.AGE": "AGE",
-  "FORM.CONSERVATORY_COURSE": "Conservatory course",
-  "FORM.CONSERVATORY_TEACHER": "Conservatory teacher",
-  "FORM.COURSE.ELEMENTARY": "Elementary",
-  "FORM.COURSE.HIGH_SCHOOL": "High School",
-  "FORM.COURSE.PRIMARY": "Primary",
-  "FORM.COURSE.PROFESSIONAL": "Prefessional",
-  "FORM.COURSE.SECONDARY": "Secondary",
-  "FORM.COURSE.SUPERIOR": "Superior",
-  "FORM.FATHERS_NAME": "Father's name",
-  "FORM.GENDER": "Gender",
-  "FORM.INSTRUMENT": "instrument",
-  "FORM.MOTHERS_NAME": "Mother's name",
-  "FORM.NAME": "Name",
-  "FORM.NOTES": "Notes",
-  "FORM.OBSERVATION": "Observation",
-  "FORM.OBSERVATIONS": "Observations",
-  "FORM.PHONE": "Phone",
-  "FORM.PHONES": "Phones",
-  "FORM.PICTURE": "Picture",
-  "FORM.SUBJECT": "Subject",
-  "FORM.SUBJECTS": "Subjects",
-  "FORM.SURNAME": "Surname",
-  "GENERAL": "General",
-  "HIDE_PASSWORD": "Hide password",
-  "INSTRUMENT.ACCORDION": "Accordion",
-  "INSTRUMENT.BAGPIPE": "Bagpie",
-  "INSTRUMENT.BASSOON": "Basson",
-  "INSTRUMENT.CELLO": "Cello",
-  "INSTRUMENT.CLARINET": "Clarinet",
-  "INSTRUMENT.CLAVE": "Clave",
-  "INSTRUMENT.DOUBLE_BASS": "Double bass",
-  "INSTRUMENT.FLUTE": "Flauta",
-  "INSTRUMENT.GUITAR": "Guittar",
-  "INSTRUMENT.HARP": "Harp",
-  "INSTRUMENT.HORN": "Horn",
-  "INSTRUMENT.OBOE": "Oboe",
-  "INSTRUMENT.PERCUSSION": "Percussion",
-  "INSTRUMENT.PIANO": "Piano",
-  "INSTRUMENT.SAXOPHONE": "Saxophone",
-  "INSTRUMENT.TRANSVERSE_FLUTE": "Transverse flute",
-  "INSTRUMENT.TROMBONE": "Trombone",
-  "INSTRUMENT.TRUMPET": "Trumpet",
-  "INSTRUMENT.TUBA": "Tuba",
-  "INSTRUMENT.TXISTU": "Txistu",
-  "INSTRUMENT.VIOLA": "Viola",
-  "INSTRUMENT.VIOLIN": "Violin",
-  "INSTRUMENT": "Instrument",
-  "INSTRUMENTS.GROUP.PERCUSSION": "Percussion",
-  "INSTRUMENTS.GROUP.STRING": "String",
-  "INSTRUMENTS.GROUP.WIND": "Wind",
-  "INSTRUMENTS": "Instrumentos",
-  "LABEL_NO": "No label",
-  "LANG.EN": "English",
-  "LANG.ES": "Spanish",
-  "LANGUAGE": "Language",
-  "MSG.BYE": "See you soon!",
-  "MSG.LOGOUT.CONFIRM": "If you do we hope you come back soon :)",
-  "MSG.LOGOUT": "Do you want to log out?",
-  "MSG.NO_ACCOUNT": "Not a member yet?",
-  "MSG.NOTHING_HERE": "Upps! There is nothing here",
-  "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
-  "MSG.SERVICE_NOT_AVAILABLE": "This service will be available soon",
-  "MSG.STUDENT_CREATE_OK": "A new student has signed up for class",
-  "MSG.STUDENT_DELETE": "Are you sure you want to delete this student?",
-  "MSG.STUDENT_UPDATE_OK": "Student edited",
-  "MSG.WELCOME": "Hello {{name}}!",
-  "MSG.YES_ACCOUNT": "Do you already have an account?",
-  "NEXT": "Next",
-  "NONE": "None",
-  "OPEN_MENU": "Open menu",
-  "OPTION_MENU": "Pption menu",
-  "PASSWORD": "Password",
-  "PICKUP_IMAGE": "Pick up an avatar",
-  "PREVIOUS": "Previous",
-  "PROP.LABEL_NO": "No label",
-  "PROP.LABEL": "Label",
-  "PROP.NAME": "Name",
-  "RESET_EMAIL": "Reset email field",
-  "RESET_FILTER": "Reset filter",
-  "RESET": "Reset",
-  "SAVE": "Save",
-  "SEARCH_STUDENT": "Search student",
-  "SELECT": "Select",
-  "SETTINGS": "Settings",
-  "SHOW_PASSWORD": "Show password",
-  "SIGN.IN_WITH_FACEBOOK": "Sign in with Facebook",
-  "SIGN.IN_WITH_GOOGLE": "Sign in with Google",
-  "SIGN.IN_WITH_TWITTER": "Sign in with Twitter",
-  "SIGN.IN": "Sign in",
-  "SIGN.OUT": "Logout",
-  "SIGN.UP": "Sign up",
-  "SORT_COLUMN": "Sort column",
-  "STUDENT_CONSERVATORY_DATA": "Musical data",
-  "STUDENT_DELETE": "Delete student",
-  "STUDENT_PARENTS_DATA": "Parent's data",
-  "STUDENT_PERSONAL_DATA": "Student data",
-  "STUDENT": "Student",
-  "STUDENTS": "Students",
-  "SUBJECT.CELLO": "Cello",
-  "SUBJECT.LANGUAGE": "Musical languaje",
-  "SUBJECT.VIOLIN": "Violin",
-  "SUBJECTS": "Subjects",
-  "THEME": "Theme",
-  "THEMING.DARK_MODE": "Dark mode",
-  "THEMING.DARK_THEME": "Dark theme",
-  "THEMING.LIGHT_THEME": "light theme",
-  "YEAR": "year",
-  "YEARS": "years"
+	"ACTION_NOT_REVERSED": "This action cannot be reversed.",
+	"ADD_DAY": "Add record",
+	"ADD_STUDENT": "Add student",
+	"AND": " and",
+	"APP_SUBTITLE": "Organize your private lessons",
+	"ARCHIVE_STUDENT": "Archive student",
+	"AVATAR": "Profile image",
+	"BACK": "Return",
+	"CANCEL": "Cancel",
+	"CLOSE_MENU": "Close menu",
+	"CONFIRM_PASSWORD": "Confirm password",
+	"DAILY": "Daily",
+	"DELETE": "Delete",
+	"EDIT_STUDENT": "Edit student",
+	"EMAIL": "E-mail",
+	"ERR": {
+		"AUTH_INVALID": "Email or password was not correct",
+		"CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
+		"CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
+		"EMAIL_ALREADY_IN_USE": "This email is already being used",
+		"EMAIL_INVALID": "Please enter a valid email",
+		"EMAIL_REQUIRED": "Email is required",
+		"PASSWORD_INVALID": "The password must be at least 6 characters",
+		"PASSWORD_REQUIRED": "Password is required",
+		"UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later.",
+		"USER_NOT_FOUND": "User not found"
+	},
+	"FINALIZE": "Finalize",
+	"FLAG_OF": "Flag of",
+	"FORM": {
+		"ACADEMIC_COURSE": "Academic course",
+		"AGE": "Age",
+		"CONSERVATORY_COURSE": "Conservatory Course",
+		"CONSERVATORY_TEACHER": "Conservatory professor",
+		"CONTENT": "Day record",
+		"COURSE": {
+			"COURSE.ELEMENTARY": "Elementary",
+			"HIGH_SCHOOL": "Baccalaureate",
+			"PRIMARY": "Primary",
+			"PROFESSIONAL": "Professional",
+			"SECONDARY": "High school",
+			"SUPERIOR": "Higher"
+		},
+		"DATE": "Date",
+		"FATHERS_NAME": "Father's name",
+		"GENDER": "Gender",
+		"INSTRUMENT": "Instrument",
+		"MOTHERS_NAME": "Mother's name",
+		"NAME": "First Name",
+		"NOTES": "Notes",
+		"OBSERVATION": "Observation",
+		"OBSERVATIONS": "Observations",
+		"PHONE": "Phone",
+		"PHONES": "Phones",
+		"PICTURE": "Image",
+		"STUDENT": "Student",
+		"SUBJECT": "Subject",
+		"SUBJECTS": "Subjects",
+		"SURNAME": "Surnames",
+		"TITLE": "Title"
+	},
+	"GENERAL": "General",
+	"HIDE_PASSWORD": "Hide password",
+	"HINT": {
+		"TITLE": "Add a small descriptive title."
+	},
+	"INSTRUMENT": {
+		"ACCORDION": "Accordion",
+		"BAGPIPE": "Bagpipes",
+		"BASSOON": "Bassoon",
+		"CELLO": "Cello",
+		"CLARINET": "Clarinet",
+		"CLAVE": "Key",
+		"DOUBLE_BASS": "Double bass",
+		"FLUTE": "Sweet flute",
+		"GROUP": {
+			"PERCUSSION": "Percussion",
+			"STRING": "String",
+			"WIND": "Wind"
+		},
+		"GUITAR": "Guitar",
+		"HARP": "Harp",
+		"HORN": "Horn",
+		"OBOE": "Oboe",
+		"PERCUSSION": "Percussion",
+		"PIANO": "Piano",
+		"SAXOPHONE": "Saxophone",
+		"TRANSVERSE_FLUTE": "Transverse flute",
+		"TROMBONE": "Trombone",
+		"TRUMPET": "Trumpet",
+		"TUBA": "Tuba",
+		"TXISTU": "Txistu",
+		"VIOLA": "Viola",
+		"VIOLIN": "Fiddle"
+	},
+	"LABEL_NO": "No tag",
+	"LANG": {
+		"DE": "German",
+		"EN": "English",
+		"ES": "Spanish",
+		"FR": "French",
+		"IT": "Italian"
+	},
+	"LANGUAGE": "Language",
+	"MARKS": "Notes",
+	"MSG": {
+		"BYE": "See you soon!",
+		"DAY_CREATE_OK": "A new record has been created",
+		"DAY_DELETE": "Are you sure you want to delete this record?",
+		"DAY_UPDATE_OK": "Modified Record",
+		"LOGOUT": "Do you want to log out?",
+		"LOGOUT_CONFIRM": "If you do we hope you come back soon :)",
+		"NOTHING_HERE": "Upps! There is nothing here",
+		"NOTHING_MAN": "¯\\_(ツ)_/¯",
+		"NO_ACCOUNT": "Not a user yet?",
+		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
+		"STUDENT_CREATE_OK": "A new student has signed up for class",
+		"STUDENT_DELETE": "Are you sure you want to delete this student?",
+		"STUDENT_UPDATE_OK": "The student has been modified",
+		"WELCOME": "Hi {{name}}!",
+		"YES_ACCOUNT": "Do you already have an account?"
+	},
+	"NEXT": "Following",
+	"NONE": "None",
+	"OPEN_MENU": "Open Menu",
+	"OPTION_MENU": "Options",
+	"PASSWORD": "Password",
+	"PHONE_MENU": "Phones",
+	"PICKUP_IMAGE": "Select an avatar",
+	"PREVIOUS": "Previous",
+	"PROP": {
+		"LABEL": "Label",
+		"LABEL_NO": "No tag",
+		"NAME": "Name"
+	},
+	"RESET": "Restart",
+	"RESET_EMAIL": "Reset email field",
+	"RESET_FILTER": "Reset filter",
+	"SAVE": "Save",
+	"SEARCH_STUDENT": "Search student",
+	"SELECT": "Select",
+	"SETTINGS": "Configuration",
+	"SHOW_LESS": "Show less",
+	"SHOW_MORE": "Show more",
+	"SHOW_PASSWORD": "Show password",
+	"SIGN": {
+		"IN": "Log In",
+		"IN_WITH_FACEBOOK": "Login with Facebook",
+		"IN_WITH_GOOGLE": "Sign in with Google",
+		"IN_WITH_TWITTER": "Sign in with Twitter",
+		"OUT": "Sign off",
+		"UP": "Create Account"
+	},
+	"SORT_COLUMN": "Sort column",
+	"STUDENT": "Student",
+	"STUDENTS": "Students",
+	"STUDENT_CONSERVATORY_DATA": "Conservatory",
+	"STUDENT_DELETE": "Delete student",
+	"STUDENT_PARENTS_DATA": "Parents",
+	"STUDENT_PERSONAL_DATA": "Student",
+	"SUBJECT": {
+		"CELLO": "Cello",
+		"LANGUAGE": "Musical language",
+		"VIOLIN": "Fiddle"
+	},
+	"SUBJECTS": "Subjects",
+	"TEACHER": "Teacher",
+	"THEME": "Topic",
+	"THEMING": {
+		"DARK_MODE": "Dark mode",
+		"DARK_THEME": "Dark Theme",
+		"LIGHT_THEME": "Clear topic"
+	},
+	"YEAR": "year",
+	"YEARS": "years"
 }
