--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,137 +1,177 @@
 {
-  "ACTION_NOT_REVERSED": "Esta acción no podrá ser revertida",
-  "ADD_STUDENT": "Añadir alumno",
-  "AND": " y",
-  "APP_SUBTITLE": "Organiza tus clases particulares",
-  "ARCHIVE_STUDENT": "Archivar alumno",
-  "AVATAR": "Imagen de perfil",
-  "BACK": "Volver",
-  "CANCEL": "Cancelar",
-  "CLOSE_MENU": "Cerrar menú",
-  "CONFIRM_PASSWORD": "Confirmar contraseña",
-  "DELETE": "Borrar",
-  "EDIT_STUDENT": "Editar alumno",
-  "EMAIL": "Email",
-  "ERR.AUTH_INVALID": "Email o contraseña incorrecta",
-  "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
-  "ERR.CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
-  "ERR.EMAIL_ALREADY_IN_USE": "Este correo electrónico ya está siendo utilizado",
-  "ERR.EMAIL_INVALID": "Por favor, introduce un email válido",
-  "ERR.EMAIL_REQUIRED": "El email es obligatorio",
-  "ERR.PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
-  "ERR.PASSWORD_REQUIRED": "La contraseña es obligatoria",
-  "ERR.UNEXPECTED_ERROR": "Ocurrió un error inexperado. Por favor, vuelva a intentarlo más tarde",
-  "ERR.USER_NOT_FOUND": "Usuario no encontrado",
-  "FINALIZE": "Finalizar",
-  "FLAG_OF": "Bandera de ",
-  "FORM.ACADEMIC_COURSE": "Curso académico",
-  "FORM.AGE": "Edad",
-  "FORM.CONSERVATORY_COURSE": "Curso del conservatorio",
-  "FORM.CONSERVATORY_TEACHER": "Profesor del conservatorio",
-  "FORM.COURSE.ELEMENTARY": "Elemental",
-  "FORM.COURSE.HIGH_SCHOOL": "Bachillerato",
-  "FORM.COURSE.PRIMARY": "Primaria",
-  "FORM.COURSE.PROFESSIONAL": "Profesional",
-  "FORM.COURSE.SECONDARY": "Secundaria",
-  "FORM.COURSE.SUPERIOR": "Superior",
-  "FORM.FATHERS_NAME": "Nombre del padre",
-  "FORM.GENDER": "Género",
-  "FORM.INSTRUMENT": "Instrumento",
-  "FORM.MOTHERS_NAME": "Nombre de la madre",
-  "FORM.NAME": "Nombre",
-  "FORM.NOTES": "Notas",
-  "FORM.OBSERVATION": "Observación",
-  "FORM.OBSERVATIONS": "Observaciones",
-  "FORM.PHONE": "Teléfono",
-  "FORM.PHONES": "Teléfonos",
-  "FORM.PICTURE": "Imagen",
-  "FORM.SUBJECT": "Asignatura",
-  "FORM.SUBJECTS": "Asignaturas",
-  "FORM.SURNAME": "Apellidos",
-  "GENERAL": "General",
-  "HIDE_PASSWORD": "Ocultar contraseña",
-  "INSTRUMENT.ACCORDION": "Acordeón",
-  "INSTRUMENT.BAGPIPE": "Gaita",
-  "INSTRUMENT.BASSOON": "Fagot",
-  "INSTRUMENT.CELLO": "Violonchelo",
-  "INSTRUMENT.CLARINET": "Clarinete",
-  "INSTRUMENT.CLAVE": "Clave",
-  "INSTRUMENT.DOUBLE_BASS": "Contrabajo",
-  "INSTRUMENT.FLUTE": "Flauta dulce",
-  "INSTRUMENT.GUITAR": "Guitarra",
-  "INSTRUMENT.HARP": "Arpa",
-  "INSTRUMENT.HORN": "Trompa",
-  "INSTRUMENT.OBOE": "Oboe",
-  "INSTRUMENT.PERCUSSION": "Percusión",
-  "INSTRUMENT.PIANO": "Piano",
-  "INSTRUMENT.SAXOPHONE": "Saxofón",
-  "INSTRUMENT.TRANSVERSE_FLUTE": "Flauta travesera",
-  "INSTRUMENT.TROMBONE": "Trombón",
-  "INSTRUMENT.TRUMPET": "Trompeta",
-  "INSTRUMENT.TUBA": "Tuba",
-  "INSTRUMENT.TXISTU": "Txistu",
-  "INSTRUMENT.VIOLA": "Viola",
-  "INSTRUMENT.VIOLIN": "Violín",
-  "INSTRUMENT": "Instrumento",
-  "INSTRUMENTS.GROUP.PERCUSSION": "Percusión",
-  "INSTRUMENTS.GROUP.STRING": "Cuerda",
-  "INSTRUMENTS.GROUP.WIND": "Viento",
-  "INSTRUMENTS": "Instrumentos",
-  "LABEL_NO": "Sin etiqueta",
-  "LANG.EN": "Inglés",
-  "LANG.ES": "Español",
-  "LANGUAGE": "Idioma",
-  "MSG.BYE": "¡Hasta pronto!",
-  "MSG.LOGOUT.CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
-  "MSG.LOGOUT": "¿Quieres cerrar la sesión?",
-  "MSG.NO_ACCOUNT": "¿Aún no eres usuario?",
-  "MSG.NOTHING_HERE": "Upps! Aquí no hay nada",
-  "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
-  "MSG.SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
-  "MSG.STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
-  "MSG.STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
-  "MSG.STUDENT_UPDATE_OK": "Alumno modificado",
-  "MSG.WELCOME": "¡Hola {{name}}!",
-  "MSG.YES_ACCOUNT": "¿Ya tienes una cuenta?",
-  "NEXT": "Siguiente",
-  "NONE": "Ninguno/a",
-  "OPEN_MENU": "Abrir menú",
-  "OPTION_MENU": "Menú de opciones",
-  "PASSWORD": "Contraseña",
-  "PICKUP_IMAGE": "Selecciona un avatar",
-  "PREVIOUS": "Anterior",
-  "PROP.LABEL_NO": "Sin etiqueta",
-  "PROP.LABEL": "Etiqueta",
-  "PROP.NAME": "Nombre",
-  "RESET_EMAIL": "Reiniciar campo de correo electrónico",
-  "RESET_FILTER": "Reiniciar filtro",
-  "RESET": "Reiniciar",
-  "SAVE": "Guardar",
-  "SEARCH_STUDENT": "Buscar alumno",
-  "SELECT": "Seleccionar",
-  "SETTINGS": "Configuración",
-  "SHOW_PASSWORD": "Mostrar contraseña",
-  "SIGN.IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
-  "SIGN.IN_WITH_GOOGLE": "Iniciar sesión con Google",
-  "SIGN.IN_WITH_TWITTER": "Iniciar sesión con Twitter",
-  "SIGN.IN": "Iniciar sesión",
-  "SIGN.OUT": "Cerrar sesión",
-  "SIGN.UP": "Crear cuenta",
-  "SORT_COLUMN": "Ordenar columna",
-  "STUDENT_CONSERVATORY_DATA": "Conservatorio",
-  "STUDENT_DELETE": "Borrar alumno",
-  "STUDENT_PARENTS_DATA": "Padres",
-  "STUDENT_PERSONAL_DATA": "Alumno",
-  "STUDENT": "Alumno",
-  "STUDENTS": "Alumnos",
-  "SUBJECT.CELLO": "Violonchelo",
-  "SUBJECT.LANGUAGE": "Lenguaje musical",
-  "SUBJECT.VIOLIN": "Violín",
-  "SUBJECTS": "Asignaturas",
-  "THEME": "Tema",
-  "THEMING.DARK_MODE": "Modo oscuro",
-  "THEMING.DARK_THEME": "Tema oscuro",
-  "THEMING.LIGHT_THEME": "Tema claro",
-  "YEAR": "año",
-  "YEARS": "años"
+	"ACTION_NOT_REVERSED": "Esta acción no podrá ser revertida",
+	"ADD_DAY": "Añadir registro",
+	"ADD_STUDENT": "Añadir alumno",
+	"AND": " y",
+	"APP_SUBTITLE": "Organiza tus clases particulares",
+	"ARCHIVE_STUDENT": "Archivar alumno",
+	"AVATAR": "Imagen de perfil",
+	"BACK": "Volver",
+	"CANCEL": "Cancelar",
+	"CLOSE_MENU": "Cerrar menú",
+	"CONFIRM_PASSWORD": "Confirmar contraseña",
+	"DAILY": "Diario",
+	"DELETE": "Borrar",
+	"EDIT_STUDENT": "Editar alumno",
+	"EMAIL": "Email",
+	"ERR": {
+		"AUTH_INVALID": "Email o contraseña incorrecta",
+		"CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
+		"CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
+		"EMAIL_ALREADY_IN_USE": "Este correo electrónico ya está siendo utilizado",
+		"EMAIL_INVALID": "Por favor, introduce un email válido",
+		"EMAIL_REQUIRED": "El email es obligatorio",
+		"PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
+		"PASSWORD_REQUIRED": "La contraseña es obligatoria",
+		"UNEXPECTED_ERROR": "Ocurrió un error inesperado. Por favor, vuelva a intentarlo más tarde",
+		"USER_NOT_FOUND": "Usuario no encontrado"
+	},
+	"FINALIZE": "Finalizar",
+	"FLAG_OF": "Bandera de ",
+	"FORM": {
+		"ACADEMIC_COURSE": "Curso académico",
+		"AGE": "Edad",
+		"CONSERVATORY_COURSE": "Curso del conservatorio",
+		"CONSERVATORY_TEACHER": "Profesor del conservatorio",
+		"CONTENT": "Registro del día",
+		"COURSE": {
+			"COURSE.ELEMENTARY": "Elemental",
+			"HIGH_SCHOOL": "Bachillerato",
+			"PRIMARY": "Primaria",
+			"PROFESSIONAL": "Profesional",
+			"SECONDARY": "Secundaria",
+			"SUPERIOR": "Superior"
+		},
+		"DATE": "Fecha",
+		"FATHERS_NAME": "Nombre del padre",
+		"GENDER": "Género",
+		"INSTRUMENT": "Instrumento",
+		"MOTHERS_NAME": "Nombre de la madre",
+		"NAME": "Nombre",
+		"NOTES": "Notas",
+		"OBSERVATION": "Observación",
+		"OBSERVATIONS": "Observaciones",
+		"PHONE": "Teléfono",
+		"PHONES": "Teléfonos",
+		"PICTURE": "Imagen",
+		"STUDENT": "Alumno",
+		"SUBJECT": "Asignatura",
+		"SUBJECTS": "Asignaturas",
+		"SURNAME": "Apellidos",
+		"TITLE": "Título"
+	},
+	"GENERAL": "General",
+	"HIDE_PASSWORD": "Ocultar contraseña",
+	"HINT": {
+		"TITLE": "Añade un pequeño título descriptivo."
+	},
+	"INSTRUMENT": {
+		"ACCORDION": "Acordeón",
+		"BAGPIPE": "Gaita",
+		"BASSOON": "Fagot",
+		"CELLO": "Violonchelo",
+		"CLARINET": "Clarinete",
+		"CLAVE": "Clave",
+		"DOUBLE_BASS": "Contrabajo",
+		"FLUTE": "Flauta dulce",
+		"GROUP": {
+			"PERCUSSION": "Percusión",
+			"STRING": "Cuerda",
+			"WIND": "Viento"
+		},
+		"GUITAR": "Guitarra",
+		"HARP": "Arpa",
+		"HORN": "Trompa",
+		"OBOE": "Oboe",
+		"PERCUSSION": "Percusión",
+		"PIANO": "Piano",
+		"SAXOPHONE": "Saxofón",
+		"TRANSVERSE_FLUTE": "Flauta travesera",
+		"TROMBONE": "Trombón",
+		"TRUMPET": "Trompeta",
+		"TUBA": "Tuba",
+		"TXISTU": "Txistu",
+		"VIOLA": "Viola",
+		"VIOLIN": "Violín"
+	},
+	"LABEL_NO": "Sin etiqueta",
+	"LANG": {
+		"DE": "Alemán",
+		"EN": "Inglés",
+		"ES": "Español",
+		"FR": "Francés",
+		"IT": "Italiano"
+	},
+	"LANGUAGE": "Idioma",
+	"MARKS": "Notas",
+	"MSG": {
+		"BYE": "¡Hasta pronto!",
+		"DAY_CREATE_OK": "Se ha creado un nuevo registro",
+		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
+		"DAY_UPDATE_OK": "Registro modificado",
+		"LOGOUT": "¿Quieres cerrar la sesión?",
+		"LOGOUT_CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
+		"NOTHING_HERE": "Upps! Aquí no hay nada",
+		"NOTHING_MAN": "¯\\_(ツ)_/¯",
+		"NO_ACCOUNT": "¿Aún no eres usuario?",
+		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
+		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
+		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
+		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
+		"WELCOME": "¡Hola {{name}}!",
+		"YES_ACCOUNT": "¿Ya tienes una cuenta?"
+	},
+	"NEXT": "Siguiente",
+	"NONE": "Ninguno/a",
+	"OPEN_MENU": "Abrir menú",
+	"OPTION_MENU": "Opciones",
+	"PASSWORD": "Contraseña",
+	"PHONE_MENU": "Teléfonos",
+	"PICKUP_IMAGE": "Selecciona un avatar",
+	"PREVIOUS": "Anterior",
+	"PROP": {
+		"LABEL": "Etiqueta",
+		"LABEL_NO": "Sin etiqueta",
+		"NAME": "Nombre"
+	},
+	"RESET": "Reiniciar",
+	"RESET_EMAIL": "Reiniciar campo de correo electrónico",
+	"RESET_FILTER": "Reiniciar filtro",
+	"SAVE": "Guardar",
+	"SEARCH_STUDENT": "Buscar alumno",
+	"SELECT": "Seleccionar",
+	"SETTINGS": "Configuración",
+	"SHOW_LESS": "Mostrar menos",
+	"SHOW_MORE": "Mostrar más",
+	"SHOW_PASSWORD": "Mostrar contraseña",
+	"SIGN": {
+		"IN": "Iniciar sesión",
+		"IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
+		"IN_WITH_GOOGLE": "Iniciar sesión con Google",
+		"IN_WITH_TWITTER": "Iniciar sesión con Twitter",
+		"OUT": "Cerrar sesión",
+		"UP": "Crear cuenta"
+	},
+	"SORT_COLUMN": "Ordenar columna",
+	"STUDENT": "Alumno",
+	"STUDENTS": "Alumnos",
+	"STUDENT_CONSERVATORY_DATA": "Conservatorio",
+	"STUDENT_DELETE": "Borrar alumno",
+	"STUDENT_PARENTS_DATA": "Padres",
+	"STUDENT_PERSONAL_DATA": "Alumno",
+	"SUBJECT": {
+		"CELLO": "Violonchelo",
+		"LANGUAGE": "Lenguaje musical",
+		"VIOLIN": "Violín"
+	},
+	"SUBJECTS": "Asignaturas",
+	"TEACHER": "Profesor",
+	"THEME": "Tema",
+	"THEMING": {
+		"DARK_MODE": "Modo oscuro",
+		"DARK_THEME": "Tema oscuro",
+		"LIGHT_THEME": "Tema claro"
+	},
+	"YEAR": "año",
+	"YEARS": "años"
 }
