--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -35,7 +35,7 @@
 		"CONSERVATORY_TEACHER": "Konservatorium Professor",
 		"CONTENT": "Tagesrekord",
 		"COURSE": {
-			"COURSE.ELEMENTARY": "Grundstufe",
+			"ELEMENTARY": "Grundstufe",
 			"HIGH_SCHOOL": "Abitur",
 			"PRIMARY": "Primär",
 			"PROFESSIONAL": "Professionell",
