Settings en/disable touch sidenav swipe

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,6 +7,11 @@
 	"ARCHIVE_STUDENT": "Student archivieren",
 	"AVATAR": "Profilbild",
 	"BACK": "Zurück",
+	"BEHAVIOR": {
+		"PAN_SIDEMENU": "Menü schieben",
+		"PAN_SIDEMENU_HINT": "Ziehen Sie Ihren Finger horizontal über den Bildschirm, um das Seitenmenü zu öffnen. (Nur für Handys)",
+		"TITLE": "Verhalten"
+	},
 	"CANCEL": "Abbrechen",
 	"CLOSE_MENU": "Menü schließen",
 	"CONFIRM_PASSWORD": "Passwort bestätigen",
