--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -7,6 +7,11 @@
 	"ARCHIVE_STUDENT": "Studente d'archivio",
 	"AVATAR": "Immagine del profilo",
 	"BACK": "Ritorno",
+	"BEHAVIOR": {
+		"PAN_SIDEMENU": "Menu scorrevole",
+		"PAN_SIDEMENU_HINT": "Trascina il dito in orizzontale sullo schermo per aprire il menu laterale. (Solo cellulare)",
+		"TITLE": "Comportamento"
+	},
 	"CANCEL": "Annullare",
 	"CLOSE_MENU": "Chiudi menu",
 	"CONFIRM_PASSWORD": "Conferma password",
