--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,11 @@
 	"ARCHIVE_STUDENT": "Archive student",
 	"AVATAR": "Profile image",
 	"BACK": "Return",
+	"BEHAVIOR": {
+		"PAN_SIDEMENU": "Slide menu",
+		"PAN_SIDEMENU_HINT": "Drag your finger horizontally across the screen to open the side menu. (Mobile only)",
+		"TITLE": "Behavior"
+	},
 	"CANCEL": "Cancel",
 	"CLOSE_MENU": "Close menu",
 	"CONFIRM_PASSWORD": "Confirm password",
