Sidenav behaviour mobile always

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -131,6 +131,7 @@
 	},
 	"NEXT": "Weiter",
 	"NONE": "Keine",
+	"OPEN_CLOSE_MENU": "Menü öffnen / schließen",
 	"OPEN_MENU": "Menü öffnen",
 	"OPTION_MENU": "Optionen",
 	"PASSWORD": "Passwort",
