--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,6 +131,7 @@
 	},
 	"NEXT": "Following",
 	"NONE": "None",
+	"OPEN_CLOSE_MENU": "Open / Close menu",
 	"OPEN_MENU": "Open Menu",
 	"OPTION_MENU": "Options",
 	"PASSWORD": "Password",
