--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -131,6 +131,7 @@
 	},
 	"NEXT": "Siguiente",
 	"NONE": "Ninguno/a",
+	"OPEN_CLOSE_MENU": "Abrir / Cerrar menú",
 	"OPEN_MENU": "Abrir menú",
 	"OPTION_MENU": "Opciones",
 	"PASSWORD": "Contraseña",
