--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -131,6 +131,7 @@
 	},
 	"NEXT": "Suivant",
 	"NONE": "Aucun",
+	"OPEN_CLOSE_MENU": "Ouvrir / Fermer le menu",
 	"OPEN_MENU": "Ouvrir le menu",
 	"OPTION_MENU": "Les options",
 	"PASSWORD": "Mot de passe",
