--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -131,6 +131,7 @@
 	},
 	"NEXT": "Seguente",
 	"NONE": "Nessuno/a",
+	"OPEN_CLOSE_MENU": "Apri / Chiudi menu",
 	"OPEN_MENU": "Apri il menu",
 	"OPTION_MENU": "Opzioni",
 	"PASSWORD": "Password",
