--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -76,7 +76,7 @@
 	"HIDE_PASSWORD": "Passwort verstecken",
 	"HINT": {
 		"ADD_NEW_PHONE": "Fügen Sie ein neues Telefon hinzu",
-		"OBSERVATIONS": "",
+		"OBSERVATIONS": "Fügen Sie eine kurze Beschreibung des Schülers hinzu",
 		"TITLE": "Fügen Sie einen kleinen beschreibenden Titel hinzu."
 	},
 	"INSTRUMENT": {
