--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -76,7 +76,7 @@
 	"HIDE_PASSWORD": "Nascondi la password",
 	"HINT": {
 		"ADD_NEW_PHONE": "Aggiungi un nuovo telefono",
-		"OBSERVATIONS": "",
+		"OBSERVATIONS": "Aggiungi una breve descrizione dello studente",
 		"TITLE": "Aggiungi un piccolo titolo descrittivo."
 	},
 	"INSTRUMENT": {
