--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -77,7 +77,10 @@
 	"HIDE_PASSWORD": "Ocultar contraseña",
 	"HINT": {
 		"ADD_NEW_PHONE": "Añade un nuevo teléfono",
+		"BIRTHDATE": "Pulse el calendario o escribe la fecha (DD/MM/AAAA)",
+		"CLASSROOM": "Puedes agrupar los alumnos en diferentes aulas",
 		"OBSERVATIONS": "Añade una breve descripción del alumno",
+		"SUBJECTS": "Marque las asignaturas que le impartirá al alumno",
 		"TITLE": "Añade un pequeño título descriptivo."
 	},
 	"INSTRUMENT": {
